--- a/index.html
+++ b/index.html
@@ -4,7 +4,124 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet"  href="styles/global.css">
+    <link rel="stylesheet"  href="styles/style.css">
+    <link rel="stylesheet"  href="fonts/fonts.css">
+    
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+<!--                                        БОШКА                                                -->
+<header class="header">
+  <nav>
+        <ul class="header__menu">
+            <li class="nav__item-none"><a href="#">главная</a></li> 
+              <a class="list-marker"><img src="images/logo-black.svg"  border="0"></a>
+            <li class="nav__item"><a href="#">посмотреть лоты</a></li>
+              <a class="list-marker"><img src="images/list_marker.svg"  border="0"></a>
+            <li class="nav__item"><a href="#">об аукционе</a></li>
+        </ul>
+  </nav>
+      <!--                                        картинка                                                -->     
+            <a href="#" class="logo"><img src="https://i.ibb.co/Pf87yts/logo-black.png" alt="logo-black" border="0"></a>
+  <!--                                        конец картинки                                                -->
+      <address class="address">
+       <a class="contact" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+       <p class=" ad loc"> наб. Принсенграхт 263- 
+           265, Амстердам <p>
+         </adress>
+</header>
+
+<!-- __________________________------------------------  НАЧИНАЕТСЯ МЭИН!!!-->
+<main>
+<section class="cover"> 
+<!--           ГЛАВНАЯ КАРТИНКА------------------>
+<div class="overlay overlay--cover"></div>
+    <h1 class="over--title">
+        <span class="overlay--text">оно</span>
+        <span class="overlay--text">тебе</span>
+        <span class="overlay--text">надо</span>
+    </h1>
+
+<div class="description"><p>аукцион вещей, в которыe никто не верил</p>
+          <a class="button "href="#">сделать ставку</a>
+</div>
+
+  </section>
+
+
+<!-- ---------------------------------ЛОТЫ!-->
+  
+  <section class="lots"></section>
+  <!--____________________________ОПИСАНИЕ-->
+ <section class="about">
+      <div class="logo-white">
+        <img src="./images/logo-white.svg" alt="Логотип: Оно тебе надо" />
+      </div>
+      <div class="about-description">
+        <h2>Об аукционе</h2>
+        <div class="about-text">
+          <p>
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+            на один аукцион. Потому что кому нужен дневник девочки-подростка
+            или картина, которую может нарисовать даже ребёнок? Кому нужны все
+            эти странные вещи, созданные любителями?
+          </p>
+          <p>
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и
+            непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих
+            лотов невозможно представить современную культуру. Когда в эти
+            вещи не верил никто, продолжали верить их создатели. И сейчас эти
+            лоты стали культовыми.
+          </p>
+        </div>
+      </div>
+    </section>
+</main>
+
+
+
+
+
+
+
+
+
+
+
+
+<footer class="footer">
+    <address class="address">
+      <a href="tel:+99995555555">+9 999 555 5555</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p>наб. Принсенграхт 263- 265, Амстердам</p>
+    </address>
+    <nav>
+      <ul class="nav-footer">
+        <li><a>главная</a></li>
+        <li><a href="#0">посмотреть лоты</a></li>
+        <li><a href="#0">об аукционе</a></li>
+      </ul>
+    </nav>
+    <div class="footer-social">
+      <ul class="footer-social-list">
+        <li class="social-link">
+          <a href="#0"><img src="./images/yt.svg" alt="Ютюб" /></a>
+        </li>
+        <li class="social-link">
+          <a href="#0"><img src="./images/vk.svg" alt="Вконтакте" /></a>
+        </li>
+        <li class="social-link">
+          <a href="#0"><img src="./images/pinterest.svg" alt="Пинтерест" /></a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+
+  </body>
+  
 </html>
