--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav>
         <ul class="header__menu">
             <li class="nav__item-none"><a href="#">главная</a></li> 
-              <a class="list-marker"><img src="images/logo-black.svg"  border="0"></a>
+                <a class="list-marker"><img src="images/list_marker.svg"  border="0"></a>
             <li class="nav__item"><a href="#">посмотреть лоты</a></li>
               <a class="list-marker"><img src="images/list_marker.svg"  border="0"></a>
             <li class="nav__item"><a href="#">об аукционе</a></li>
