--- a/index.html
+++ b/index.html
@@ -53,7 +53,86 @@
 
 <!-- ---------------------------------ЛОТЫ!-->
   
-  <section class="lots"></section>
+  <section class="lots">
+
+<h2 class="lots__heading">лоты</h2>
+
+<div class="lots__card-list">
+<article class="lot lot1">
+   <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+        <p class="card__text">
+          Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка,
+          если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+        </p>
+</article>
+<article class="lot lot2">
+  <h3 class="card__title">
+          Книга, где описан один скучный день из жизни<br> рекламного агента
+        </h3>
+        <p class="card__text">
+          Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами
+          на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года
+          и об истории литературы, начиная с античных времён. И это всё накладывается
+          на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+        </p>
+</article>
+<article class="lot lot3">
+  <h3 class="card__title">
+          Картина, которую повторит даже 5-летний сын<br> маминой подруги
+        </h3>
+        <p class="card__text">
+          Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на 
+		  инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое 
+		  поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+        </p>
+</article>
+</div>
+<a href="#" class="lots__look-more-link">посмотреть больше</a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  </section>
   <!--____________________________ОПИСАНИЕ-->
  <section class="about">
       <div class="logo-white">
