--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
   </nav>
       <!--                                        картинка                                                -->     
-            <a href="#" class="logo"><img src="https://i.ibb.co/Pf87yts/logo-black.png" alt="logo-black" border="0"></a>
+            <a href="#" class="logo"><img src="/images/logo-black.svg" alt="logo-black" border="0"></a>
   <!--                                        конец картинки                                                -->
       <address class="address">
        <a class="contact" href="tel:+99995555555">+9 999 555 5555</a>
@@ -36,19 +36,18 @@
 <!-- __________________________------------------------  НАЧИНАЕТСЯ МЭИН!!!-->
 <main>
 <section class="cover"> 
-<!--           ГЛАВНАЯ КАРТИНКА------------------>
-<div class="overlay overlay--cover"></div>
+    <div class="overlay overlay--cover"></div>
     <h1 class="over--title">
-        <span class="overlay--text">оно</span>
-        <span class="overlay--text">тебе</span>
-        <span class="overlay--text">надо</span>
+        <span class="overlay--text1">оно</span>
+        <span class="overlay--text2">тебе</span>
+        <span class="overlay--text3">надо</span>
     </h1>
-
-<div class="description"><p>аукцион вещей, в которыe никто не верил</p>
+    <div class="description">
+    <p class="cover__description-text">аукцион вещей, в которыe никто не верил</p>
           <a class="button "href="#">сделать ставку</a>
-</div>
+ </div>
 
-  </section>
+</section>
 
 
 <!-- ---------------------------------ЛОТЫ!-->
@@ -65,6 +64,7 @@
           если бы вы не знали, что режиссёр — Пол Томас Андерсон?
         </p>
 </article>
+
 <article class="lot lot2">
   <h3 class="card__title">
           Книга, где описан один скучный день из жизни<br> рекламного агента
@@ -76,6 +76,7 @@
           на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
         </p>
 </article>
+
 <article class="lot lot3">
   <h3 class="card__title">
           Картина, которую повторит даже 5-летний сын<br> маминой подруги
@@ -86,53 +87,11 @@
 		  поставили, если бы не знали, что это — одна из революционных работ Кандинского?
         </p>
 </article>
+
 </div>
 <a href="#" class="lots__look-more-link">посмотреть больше</a>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </section>
+ </section>
   <!--____________________________ОПИСАНИЕ-->
  <section class="about">
       <div class="logo-white">
