--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet"  href="styles/global.css">
     <link rel="stylesheet"  href="styles/style.css">
     <link rel="stylesheet"  href="fonts/fonts.css">
@@ -93,32 +94,43 @@
 
  </section>
   <!--____________________________ОПИСАНИЕ-->
- <section class="about">
-      <div class="logo-white">
-        <img src="./images/logo-white.svg" alt="Логотип: Оно тебе надо" />
-      </div>
-      <div class="about-description">
-        <h2>Об аукционе</h2>
-        <div class="about-text">
-          <p>
-            Здесь вы не встретите очередное пафосное собрание невероятно
-            дорогого антиквариата. Наши лоты вообще не должны были попасть ни
-            на один аукцион. Потому что кому нужен дневник девочки-подростка
-            или картина, которую может нарисовать даже ребёнок? Кому нужны все
-            эти странные вещи, созданные любителями?
-          </p>
-          <p>
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё
-            время. В пух и прах растерзанные критиками. Непринятые и
-            непонятые. Когда-то они казались просто неудачными. Но, несмотря
-            на критику, кажущуюся простоту или сложность, сейчас без этих
-            лотов невозможно представить современную культуру. Когда в эти
-            вещи не верил никто, продолжали верить их создатели. И сейчас эти
-            лоты стали культовыми.
-          </p>
+ 
+ 
+<section class="about">
+<div class="about__column">
+    <div class="first__column">
+
+      <div class="container">
+        <div class="about__logo"><img class="about__logo-image" src="/images/logo-white.svg">
         </div>
       </div>
-    </section>
+    </div>
+    <div class="second__column">
+      <h2 class="about__title">Об аукционе</h2>
+      <div class="about__text">
+        <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не
+          должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую
+          может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+
+        <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
+          Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+          на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
+          культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+        </p>
+      </div>
+      </div>
+  </div>
+</section>
+ 
+ 
+ 
+ 
+
+
+
+
+
+
 </main>
 
 
@@ -130,7 +142,7 @@
 
 
 
-
+<!--
 
 <footer class="footer">
     <address class="address">
@@ -158,7 +170,7 @@
         </li>
       </ul>
     </div>
-  </footer>
+  </footer>  -->
 
   </body>
   
