--- a/index.html
+++ b/index.html
@@ -12,30 +12,31 @@
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
-<!--                                        БОШКА                                                -->
+<!--                                        HEADER                                                -->
 <header class="header">
   <nav>
         <ul class="header__menu">
             <li class="nav__item-none"><a href="#">главная</a></li> 
-                <a class="list-marker"><img src="images/list_marker.svg"  border="0"></a>
+            <li><img class="list-marker" src="images/list_marker.svg" alt="#"></li> 
             <li class="nav__item"><a href="#">посмотреть лоты</a></li>
-              <a class="list-marker"><img src="images/list_marker.svg"  border="0"></a>
+            <li><img class="list-marker" src="images/list_marker.svg" alt="#"></li> 
             <li class="nav__item"><a href="#">об аукционе</a></li>
         </ul>
   </nav>
-      <!--                                        картинка                                                -->     
-            <a href="#" class="logo"><img src="/images/logo-black.svg" alt="logo-black" border="0"></a>
-  <!--                                        конец картинки                                                -->
-      <address class="address">
+      <!--                                        IMG                                                -->     
+            <a class="head__logo-image"><img src="/images/logo-black.svg" alt="logo-black"></a>
+  <!--                                        IMG END                                                -->
+  <address class="address">
        <a class="contact" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
        <p class=" ad loc"> наб. Принсенграхт 263- 
-           265, Амстердам <p>
-         </adress>
+           265, Амстердам </p>
+  </address>
 </header>
 
-<!-- __________________________------------------------  НАЧИНАЕТСЯ МЭИН!!!-->
+
 <main>
+ <!--========================COVER==============================-->
 <section class="cover"> 
     <div class="overlay overlay--cover"></div>
     <h1 class="over--title">
@@ -45,13 +46,13 @@
     </h1>
     <div class="description">
     <p class="cover__description-text">аукцион вещей, в которыe никто не верил</p>
-          <a class="button "href="#">сделать ставку</a>
+          <a class="button" href="#">сделать ставку</a>
  </div>
 
 </section>
 
 
-<!-- ---------------------------------ЛОТЫ!-->
+<!--=======================LOTS===============================-->
   
   <section class="lots">
 
@@ -88,20 +89,19 @@
 		  поставили, если бы не знали, что это — одна из революционных работ Кандинского?
         </p>
 </article>
-
 </div>
 <a href="#" class="lots__look-more-link">посмотреть больше</a>
+</section>
 
- </section>
-  <!--____________________________ОПИСАНИЕ-->
- 
- 
+
+
+<!-- ========================ABOUT=========================================-->
 <section class="about">
 <div class="about__column">
     <div class="first__column">
 
       <div class="container">
-        <div class="about__logo"><img class="about__logo-image" src="/images/logo-white.svg">
+        <div class="about__logo"><img class="about__logo-image" src="/images/logo-white.svg" alt="white-logo">
         </div>
       </div>
     </div>
@@ -121,57 +121,29 @@
       </div>
   </div>
 </section>
- 
- 
- 
- 
-
-
-
-
-
 
 </main>
 
-
-
-
-
-
-
-
-
-
-<!--
-
+<!--======================FOOTER========================================-->
 <footer class="footer">
-    <address class="address">
-      <a href="tel:+99995555555">+9 999 555 5555</a>
-      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-      <p>наб. Принсенграхт 263- 265, Амстердам</p>
-    </address>
-    <nav>
-      <ul class="nav-footer">
-        <li><a>главная</a></li>
-        <li><a href="#0">посмотреть лоты</a></li>
-        <li><a href="#0">об аукционе</a></li>
-      </ul>
-    </nav>
-    <div class="footer-social">
-      <ul class="footer-social-list">
-        <li class="social-link">
-          <a href="#0"><img src="./images/yt.svg" alt="Ютюб" /></a>
-        </li>
-        <li class="social-link">
-          <a href="#0"><img src="./images/vk.svg" alt="Вконтакте" /></a>
-        </li>
-        <li class="social-link">
-          <a href="#0"><img src="./images/pinterest.svg" alt="Пинтерест" /></a>
-        </li>
-      </ul>
-    </div>
-  </footer>  -->
 
+
+  
+   <address class="address fooss">
+       <a class="contact" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+       <p class=" ad loc"> наб. Принсенграхт 263- 
+           265, Амстердам </p>
+  </address>
+
+   <nav>
+        <ul class="header__menu">
+            <li class="nav__item-none"><a href="#">главная</a></li> 
+            <li class="nav__item"><a href="#">посмотреть лоты</a></li>
+            <li class="nav__item"><a href="#">об аукционе</a></li>
+        </ul>
+  </nav>
+ </footer> 
   </body>
   
 </html>
