--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
   </head>
   <body>
 <!--                                        HEADER                                                -->
-<header class="header">
+<header class="head">
   <nav>
-        <ul class="header__menu">
+        <ul class="head__menu">
             <li class="nav__item-none"><a href="#">главная</a></li> 
-            <li><img class="list-marker" src="images/list_marker.svg" alt="#"></li> 
             <li class="nav__item"><a href="#">посмотреть лоты</a></li>
-            <li><img class="list-marker" src="images/list_marker.svg" alt="#"></li> 
             <li class="nav__item"><a href="#">об аукционе</a></li>
         </ul>
   </nav>
@@ -29,8 +27,7 @@
   <address class="address">
        <a class="contact" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-       <p class=" ad loc"> наб. Принсенграхт 263- 
-           265, Амстердам </p>
+       <p class=" ad loc"> наб. Принсенграхт 263- 265, Амстердам </p>
   </address>
 </header>
 
@@ -38,7 +35,7 @@
 <main>
  <!--========================COVER==============================-->
 <section class="cover"> 
-    <div class="overlay overlay--cover"></div>
+    <div class="overlay"></div>
     <h1 class="over--title">
         <span class="overlay--text1">оно</span>
         <span class="overlay--text2">тебе</span>
@@ -109,13 +106,13 @@
       <h2 class="about__title">Об аукционе</h2>
       <div class="about__text">
         <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не
-          должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую
+          должны были попасть<br> ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую
           может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
 
         <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
-          Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+          Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря<br>
           на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
-          культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты<br>стали культовыми.
         </p>
       </div>
       </div>
@@ -142,6 +139,7 @@
             <li class="nav__item"><a href="#">посмотреть лоты</a></li>
             <li class="nav__item"><a href="#">об аукционе</a></li>
         </ul>
+        
   </nav>
  </footer> 
   </body>
