--- a/index.html
+++ b/index.html
@@ -4,144 +4,180 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet"  href="styles/global.css">
-    <link rel="stylesheet"  href="styles/style.css">
-    <link rel="stylesheet"  href="fonts/fonts.css">
-    
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="fonts/fonts.css" />
+
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
-<!--                                        HEADER                                                -->
-<header class="head">
-  <nav>
+    <!--                                        HEADER                                                -->
+    <header class="head">
+      <nav>
         <ul class="head__menu">
-            <li class="nav__item-none"><a href="#">главная</a></li> 
-            <li class="nav__item"><a href="#">посмотреть лоты</a></li>
-            <li class="nav__item"><a href="#">об аукционе</a></li>
+          <li class="nav__item-none"><a href="#">главная</a></li>
+          <li class="nav__item"><a href="#">посмотреть лоты</a></li>
+          <li class="nav__item"><a href="#">об аукционе</a></li>
         </ul>
-  </nav>
-      <!--                                        IMG                                                -->     
-            <a class="head__logo-image"><img src="/images/logo-black.svg" alt="logo-black"></a>
-  <!--                                        IMG END                                                -->
-  <address class="address">
-       <a class="contact" href="tel:+99995555555">+9 999 555 5555</a>
+      </nav>
+      <!--                                        IMG                                                -->
+      <a class="head__img"
+        ><img src="/images/logo-black.svg" alt="logo-black"
+      /></a>
+      <!--                                        IMG END                                                -->
+      <address class="address">
+        <a class="contact" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-       <p class=" ad loc"> наб. Принсенграхт 263- 265, Амстердам </p>
-  </address>
-</header>
+        <p class="ad loc">наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+    </header>
 
-
-<main>
- <!--========================COVER==============================-->
-<section class="cover"> 
-    <div class="overlay"></div>
-    <h1 class="over--title">
-        <span class="overlay--text1">оно</span>
-        <span class="overlay--text2">тебе</span>
-        <span class="overlay--text3">надо</span>
-    </h1>
-    <div class="description">
-    <p class="cover__description-text">аукцион вещей, в которыe никто не верил</p>
+    <main>
+      <!--========================COVER==============================-->
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="over--title">
+          <span class="overlay--text1">оно</span>
+          <span class="overlay--text2">тебе</span>
+          <span class="overlay--text3">надо</span>
+        </h1>
+        <div class="description">
+          <p class="cover__description-text">
+            аукцион вещей, в которыe никто не верил
+          </p>
           <a class="button" href="#">сделать ставку</a>
- </div>
-
-</section>
-
-
-<!--=======================LOTS===============================-->
-  
-  <section class="lots">
-
-<h2 class="lots__heading">лоты</h2>
-
-<div class="lots__card-list">
-<article class="lot lot1">
-   <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
-        <p class="card__text">
-          Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка,
-          если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-        </p>
-</article>
-
-<article class="lot lot2">
-  <h3 class="card__title">
-          Книга, где описан один скучный день из жизни<br> рекламного агента
-        </h3>
-        <p class="card__text">
-          Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами
-          на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года
-          и об истории литературы, начиная с античных времён. И это всё накладывается
-          на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
-        </p>
-</article>
-
-<article class="lot lot3">
-  <h3 class="card__title">
-          Картина, которую повторит даже 5-летний сын<br> маминой подруги
-        </h3>
-        <p class="card__text">
-          Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на 
-		  инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое 
-		  поставили, если бы не знали, что это — одна из революционных работ Кандинского?
-        </p>
-</article>
-</div>
-<a href="#" class="lots__look-more-link">посмотреть больше</a>
-</section>
-
-
-
-<!-- ========================ABOUT=========================================-->
-<section class="about">
-<div class="about__column">
-    <div class="first__column">
-
-      <div class="container">
-        <div class="about__logo"><img class="about__logo-image" src="/images/logo-white.svg" alt="white-logo">
         </div>
-      </div>
-    </div>
-    <div class="second__column">
-      <h2 class="about__title">Об аукционе</h2>
-      <div class="about__text">
-        <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не
-          должны были попасть<br> ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую
-          может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+      </section>
 
-        <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
-          Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря<br>
-          на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
-          культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты<br>стали культовыми.
-        </p>
-      </div>
-      </div>
-  </div>
-</section>
+      <!--=======================LOTS===============================-->
 
-</main>
+      <section class="lots">
+        <h2 class="lots__heading">лоты</h2>
 
-<!--======================FOOTER========================================-->
-<footer class="footer">
+        <div class="lots__card-list">
+          <article class="lot lot1">
+            <h3 class="card__title">
+              Фильм режиссёра, который бросил киношколу
+            </h3>
+            <p class="card__text">
+              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+              ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+            </p>
+          </article>
 
+          <article class="lot lot2">
+            <h3 class="card__title">
+              Книга, где описан один скучный день из жизни<br />
+              рекламного агента
+            </h3>
+            <p class="card__text">
+              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+              переходами на древнеанглийский. В ней одновременно рассказывается
+              о 16 июня 1904 года и об истории литературы, начиная с античных
+              времён. И это всё накладывается на эпическую поэму Гомера. Сколько
+              бы вы поставили на «Улисса» Джеймса Джойса?
+            </p>
+          </article>
 
-  
-   <address class="address fooss">
-       <a class="contact" href="tel:+99995555555">+9 999 555 5555</a>
+          <article class="lot lot3">
+            <h3 class="card__title">
+              Картина, которую повторит даже 5-летний сын<br />
+              маминой подруги
+            </h3>
+            <p class="card__text">
+              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
+              похожее на инфузорию-туфельку. Никаких полей, лесов, котиков...
+              Сколько бы вы на такое поставили, если бы не знали, что это — одна
+              из революционных работ Кандинского?
+            </p>
+          </article>
+        </div>
+        <a href="#" class="lots__look-more-link">посмотреть больше</a>
+      </section>
+
+      <!-- ========================ABOUT=========================================-->
+      <section class="about">
+        <div class="about__column">
+          <div class="first__column">
+            <div class="container">
+              <div class="about__logo">
+                <img
+                  class="about__logo-image"
+                  src="/images/logo-white.svg"
+                  alt="white-logo"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="second__column">
+            <h2 class="about__title">Об аукционе</h2>
+            <div class="about__text">
+              <p>
+                Здесь вы не встретите очередное пафосное собрание невероятно
+                дорогого антиквариата. Наши лоты вообще не должны были
+                попасть<br />
+                ни на один аукцион. Потому что кому нужен дневник
+                девочки-подростка или картина, которую может нарисовать даже
+                ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+              </p>
+
+              <p>
+                Слишком сложные или, наоборот, слишком простые. Опережающие своё
+                время. В пух и прах растерзанные критиками. Непринятые и
+                непонятые. Когда-то они казались просто неудачными. Но,
+                несмотря<br />
+                на критику, кажущуюся простоту или сложность, сейчас без этих
+                лотов невозможно представить современную культуру. Когда в эти
+                вещи не верил никто, продолжали верить их создатели. И сейчас
+                эти лоты<br />стали культовыми.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!--======================FOOTER========================================-->
+    <footer class="footer">
+      <address class="address fooss">
+        <a class="contact" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-       <p class=" ad loc"> наб. Принсенграхт 263- 
-           265, Амстердам </p>
-  </address>
+        <p class="ad loc">наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
 
-   <nav>
-        <ul class="header__menu">
-            <li class="nav__item-none"><a href="#">главная</a></li> 
-            <li class="nav__item"><a href="#">посмотреть лоты</a></li>
-            <li class="nav__item"><a href="#">об аукционе</a></li>
+      <nav class="foo__menu">
+        <ul class="foo__list">
+          <li class="foo__item"><a class="foo__link-no" href="#">главная</a></li>
+          <li class="foo__item"><a class="foo__link" href="#">посмотреть лоты</a></li>
+          <li class="foo__item"><a class="foo__link" href="#">об аукционе</a></li>
         </ul>
-        
-  </nav>
- </footer> 
+      </nav>
+
+      <ul class="foo__soc-list">
+        <li class="foo__soc-item">
+          <a class="foo__soc-link" href="#">
+            <img class="foo__soc-icon" src="/images/yt.svg" alt="youtube"/>
+          </a>
+        </li>
+        <li class="foo__soc-item">
+          <a class="foo__soc-link" href="#">
+            <img class="foo__soc-icon" src="/images/vk.svg" alt="VK"/>
+          </a>
+        </li>
+        <li class="foo__soc-item">
+          <a class="foo__soc-link" href="#">
+            <img
+              class="foo__soc-icon"
+              src="/images/pinterest.svg"
+              alt="pinterest"/>
+          </a>
+        </li>
+      </ul>
+
+    </footer>
   </body>
-  
 </html>
