--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="fonts/fonts.css" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="fonts/fonts.css" />
 
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
@@ -151,21 +151,27 @@
 
       <nav class="foo__menu">
         <ul class="foo__list">
-          <li class="foo__item"><a class="foo__link-no" href="#">главная</a></li>
-          <li class="foo__item"><a class="foo__link" href="#">посмотреть лоты</a></li>
-          <li class="foo__item"><a class="foo__link" href="#">об аукционе</a></li>
+          <li class="foo__item">
+            <a class="foo__link-no" href="#">главная</a>
+          </li>
+          <li class="foo__item">
+            <a class="foo__link" href="#">посмотреть лоты</a>
+          </li>
+          <li class="foo__item">
+            <a class="foo__link" href="#">об аукционе</a>
+          </li>
         </ul>
       </nav>
 
       <ul class="foo__soc-list">
         <li class="foo__soc-item">
           <a class="foo__soc-link" href="#">
-            <img class="foo__soc-icon" src="/images/yt.svg" alt="youtube"/>
+            <img class="foo__soc-icon" src="/images/yt.svg" alt="youtube" />
           </a>
         </li>
         <li class="foo__soc-item">
           <a class="foo__soc-link" href="#">
-            <img class="foo__soc-icon" src="/images/vk.svg" alt="VK"/>
+            <img class="foo__soc-icon" src="/images/vk.svg" alt="VK" />
           </a>
         </li>
         <li class="foo__soc-item">
@@ -173,11 +179,11 @@
             <img
               class="foo__soc-icon"
               src="/images/pinterest.svg"
-              alt="pinterest"/>
+              alt="pinterest"
+            />
           </a>
         </li>
       </ul>
-
     </footer>
   </body>
 </html>
