--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
       <!--                                        IMG                                                -->
       <a class="head__img"
-        ><img src="/images/logo-black.svg" alt="logo-black"
+        ><img src="./images/logo-black.svg" alt="logo-black"
       /></a>
       <!--                                        IMG END                                                -->
       <address class="address">
@@ -107,7 +107,7 @@
               <div class="about__logo">
                 <img
                   class="about__logo-image"
-                  src="/images/logo-white.svg"
+                  src="./images/logo-white.svg"
                   alt="white-logo"
                 />
               </div>
@@ -166,19 +166,19 @@
       <ul class="foo__soc-list">
         <li class="foo__soc-item">
           <a class="foo__soc-link" href="#">
-            <img class="foo__soc-icon" src="/images/yt.svg" alt="youtube" />
+            <img class="foo__soc-icon" src="./images/yt.svg" alt="youtube" />
           </a>
         </li>
         <li class="foo__soc-item">
           <a class="foo__soc-link" href="#">
-            <img class="foo__soc-icon" src="/images/vk.svg" alt="VK" />
+            <img class="foo__soc-icon" src="./images/vk.svg" alt="VK" />
           </a>
         </li>
         <li class="foo__soc-item">
           <a class="foo__soc-link" href="#">
             <img
               class="foo__soc-icon"
-              src="/images/pinterest.svg"
+              src="./images/pinterest.svg"
               alt="pinterest"
             />
           </a>
