--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
-    <!--                                        HEADER                                                -->
+    <!--                                        HEADER       -->
     <header class="head">
       <nav>
         <ul class="head__menu">
@@ -24,11 +24,11 @@
           <li class="nav__item"><a href="#">об аукционе</a></li>
         </ul>
       </nav>
-      <!--                                        IMG                                                -->
+      <!--                                        IMG       -->
       <a class="head__img"
         ><img src="./images/logo-black.svg" alt="logo-black"
       /></a>
-      <!--                                        IMG END                                                -->
+      <!--                                        IMG END          -->
       <address class="address">
         <a class="contact" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
@@ -60,6 +60,7 @@
 
         <div class="lots__card-list">
           <article class="lot lot1">
+            <div class="overlay"></div>
             <h3 class="card__title">
               Фильм режиссёра, который бросил киношколу
             </h3>
@@ -70,6 +71,7 @@
           </article>
 
           <article class="lot lot2">
+            <div class="overlay"></div>
             <h3 class="card__title">
               Книга, где описан один скучный день из жизни<br />
               рекламного агента
@@ -84,6 +86,7 @@
           </article>
 
           <article class="lot lot3">
+            <div class="overlay"></div>
             <h3 class="card__title">
               Картина, которую повторит даже 5-летний сын<br />
               маминой подруги
