--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <address class="address">
         <a class="contact" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p class="ad loc">наб. Принсенграхт 263- 265, Амстердам</p>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
 
@@ -41,9 +41,9 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="over--title">
-          <span class="overlay--text1">оно</span>
-          <span class="overlay--text2">тебе</span>
-          <span class="overlay--text3">надо</span>
+          <span class="overlay__text-start">оно</span>
+          <span class="overlay__text-center">тебе</span>
+          <span class="overlay__text-end">надо</span>
         </h1>
         <div class="description">
           <p class="cover__description-text">
@@ -99,7 +99,10 @@
             </p>
           </article>
         </div>
-        <a href="#" class="lots__look-more-link">посмотреть больше</a>
+        
+        <div class="lots__look-more">
+            <a href="#" class="lots__look-more-link">посмотреть больше</a>
+        </div>
       </section>
 
       <!-- ========================ABOUT=========================================-->
@@ -149,7 +152,7 @@
       <address class="address fooss">
         <a class="contact" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p class="ad loc">наб. Принсенграхт 263-265, Амстердам</p>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
 
       <nav class="foo__menu">
