--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
     <header class="head">
       <nav>
         <ul class="head__menu">
-          <li class="nav__item nav__item-none"><a class="head__link head__link-no-under" href="#">главная</a></li>
-          <li class="nav__item"><a class="head__link" href="#">посмотреть лоты</a></li>
-          <li class="nav__item"><a class="head__link" href="#">об аукционе</a></li>
+          <li class="nav__item nav__item-none">
+            <a class="head__link head__link-no-under" href="#">главная</a>
+          </li>
+          <li class="nav__item">
+            <a class="head__link" href="#">посмотреть лоты</a>
+          </li>
+          <li class="nav__item">
+            <a class="head__link" href="#">об аукционе</a>
+          </li>
         </ul>
       </nav>
       <!--                                        IMG       -->
@@ -139,14 +145,14 @@
                 подростка или картина, которую может нарисовать даже ребёнок?
                 Кому нужны все эти странные вещи, созданные любителями?
               </p>
-              <p>   
-                Слишком сложные или, наоборот, слишком простые. Опережающие
-                своё время. В пух и прах растерзанные критиками. Непринятые и
+              <p>
+                Слишком сложные или, наоборот, слишком простые. Опережающие своё
+                время. В пух и прах растерзанные критиками. Непринятые и
                 непонятые. Когда-то они казались просто неудачными. Но, несмотря
-                на критику, кажущуюся простоту или сложность, сейчас без этих лотов 
-                невозможно представить современную культуру. Когда в эти вещи не
-                верил никто, продолжали верить их создатели. И сейчас эти лоты
-                стали культовыми.
+                на критику, кажущуюся простоту или сложность, сейчас без этих
+                лотов невозможно представить современную культуру. Когда в эти
+                вещи не верил никто, продолжали верить их создатели. И сейчас
+                эти лоты стали культовыми.
               </p>
             </div>
           </div>
