--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </nav>
       <!--                                        IMG       -->
       <a class="head__logo-img"
-        ><img class="head__img" src="./images/logo-black.svg" alt="logo-black"
+        ><img class="head__img" src="./images/logo-black.svg" alt="черный-логотип"
       /></a>
       <!--                                        IMG END          -->
       <address class="address">
@@ -130,7 +130,7 @@
                 <img
                   class="about__logo-image"
                   src="./images/logo-white.svg"
-                  alt="white-logo"
+                  alt="белый-логотип"
                 />
               </div>
             </div>
